# Project2Summer2026

./: .gitignore  CMakeLists.txt  DataLoader.cpp  DataLoader.h  GuiMain.cpp  Movie.h  Performance.cpp  Performance.h  ProjectTests.cpp  README.md  Recommendation.cpp  Recommendation.h  Watchlist.cpp  Watchlist.h  main.cpp  run_gui.bat  variousSearches.cpp  variousSearches.h
